--- a/BANCA - Copy/src/main/resources/application.properties
+++ b/BANCA - Copy/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BANCA
-spring.datasource.url=jdbc:mysql://localhost:3306/banca2
+spring.datasource.url=jdbc:mysql://root:ymOSNnxzrxGrJmrjoYAprQWifeGzkkKg@mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=ymOSNnxzrxGrJmrjoYAprQWifeGzkkKg
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
