--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 	<name>BANCA</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
+
 	<licenses>
 		<license/>
 	</licenses>
