--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=BANCA
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://root:RUfwYvhxzQeOSGHqZFsOGAmRgjRVMmun@mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=ymOSNnxzrxGrJmrjoYAprQWifeGzkkKg
+spring.datasource.password=RUfwYvhxzQeOSGHqZFsOGAmRgjRVMmun
 
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
